--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -264,6 +264,71 @@ b <- ggplot(d_sub,
 cowplot::plot_grid(a,b)
 ```
 
+
+```{r growth, fig.cap="TODO veronica messing around. Dark blue is fastest RT, dark red is slowest RT -- not sure what the ideal legend is.", fig.env="figure*", fig.height = 2.5, fig.width=4, out.width=".5\\textwidth"}
+
+library(nlme)
+
+datasets_with_age_variation <- d_trial |>
+  group_by(dataset_name) |>
+  summarise(age_range = max(age) - min(age)) |>
+  filter(age_range >= AGEVAR_CUTOFF)
+
+  d_sub_prod <- filter(d_sub, !is.na(prod)) |>
+  group_by(subject_id) |>
+  mutate(log_rt_0 = log_rt[1],
+         acc_0 = long_window_accuracy[1]) |> 
+  filter(!is.na(log_rt_0))
+
+mod3 <- nlme(model = prod ~ SSlogis(age, Asym = 1, xmid, scale),
+             data = d_sub_prod,
+             fixed = xmid + scale ~ log_rt_0,
+             random = xmid + scale ~ 1,
+             groups = ~ dataset_name,
+             start = c(xmid = 20, scale = 3, `xmid:log_rt_0` = 1, `scale:log_rt_0` = 3),
+             na.action = na.exclude, 
+             control = list(maxIter = 1000, tolerance = 10))
+
+# fixed effects (no CIs)
+global_preds <- expand_grid(age = seq(min(d_sub_prod$age), 
+                                      max(d_sub_prod$age), .1), 
+                            log_rt_0 = c(quantile(d_sub_prod$log_rt, 
+                                                  c(.1,.25,.5,.75,.9), 
+                                                  na.rm=TRUE)))
+global_preds$pred <- predict(mod3, newdata = global_preds, level = 0)
+
+
+#random effects
+dataset_preds <- d_sub |>
+  filter(!is.na(prod)) |> # filter on predictor
+  group_by(dataset_name) |>
+  summarise(min_age = min(age),
+            max_age = max(age)) |>
+  group_by(dataset_name) |>
+  mutate(df = map2(min_age, max_age, ~expand_grid(age = seq(.x, .y, .1), log_rt_0 = c(quantile(d_sub_prod$log_rt, 
+                                                  c(.1,.25,.5,.75,.9), 
+                                                  na.rm=TRUE))))) |>
+  select(-min_age, -max_age) |>
+  unnest(col = "df") |>
+  ungroup()
+
+library(viridis)
+dataset_preds$pred <- predict(mod3,
+                              newdata = dataset_preds,
+                              level = c(0,1))$predict.dataset_name
+
+ggplot(d_sub_prod, aes(x = age, y = prod, col = as.factor(log_rt_0))) + 
+  geom_point(alpha = .02, color="black") + 
+  geom_line(data = dataset_preds |>   filter(dataset_name %in% datasets_with_age_variation$dataset_name), aes(y = pred, group = interaction(log_rt_0, dataset_name)), lty="dashed", alpha=.5)+
+    geom_line(data = global_preds, aes(y = pred, group = log_rt_0, col = as.factor(log_rt_0)), size=1)+
+  scale_color_viridis(discrete=T, option="H")+
+  theme(legend.position = "none")+
+  labs(y="Production", x="Age in months")
+# +
+#   geom_line(data = dataset_preds, aes(y = pred))
+```
+
+
 ## Variability of word recognition decreases {.unnumbered}
 
 ```{r var_mods}
@@ -381,7 +446,13 @@ node_text <- tibble(name=c("acc", "acc_sd", "accuracy", "comp", "log_age", "log_
 nodes <- get_nodes(fit3_age) |> tibble() |> left_join(node_text) |> mutate(label=ifelse(shape=="oval",pretty, str_c(pretty, "\n", est_sig)))
 
 
-edges <- get_edges(fit3_age) |> filter(label!="1.00") |> mutate(label_location=.5)
+edges <- get_edges(fit3_age) |> filter(label!="1.00") |> mutate(label_location=.5) |> mutate(label_hjust=.5, label_vjust=.5, label_lineheight=1.5)
+
+edges[9, "label_hjust"]=1
+edges[7, "label_hjust"]=1
+
+edges[18, "label_hjust"]=0
+edges[16, "label_hjust"]=0
 
 edges[17,"curvature"]=50
 edges[17,"label_location"]=.6
@@ -394,7 +465,12 @@ prepare_graph(edges=edges, nodes=nodes, text_size = 2.5, layout = t(layout_age),
           rect_height=3,
           ellipses_width=3,
           ellipses_height=3,
-          variance_diameter=2,
+          variance_height=2,
+          variance_width=1.5,
+          arrow_angle=15,
+          arrow_length=.1,
+          var_arrow_angle=15,
+          var_arrow_length=.1,
           spacing_y=4,
           spacing_x=4,
           fix_coord=FALSE) |> plot_happy_arrows()
@@ -538,36 +614,36 @@ In sum, these findings provide further evidence consistent with the claim that f
 ```{r longitudinal, fig.env="figure*", height = 3.5, fig.cap = "Structural equation model showing longitudinal couplings between growth parameters. "}
 layout <- read.csv(here("misc/layout_slopes_observed_growth.csv"), header = FALSE)
 
-
-node_text <- tribble(~name, ~ pretty,
-                     "acc_t0", "t0 Accuracy",
-                     "acc_t1", "t1 Accuracy",
-                     "acc_t2", "t2 Accuracy",
-                     "acc_t3", "t3 Accuracy",
-                     "acc_t4", "t4 Accuracy",
-                     "accuracy_intercept", "Accuracy intercept",
-                     "accuracy_slope", "Accuracy slope",
-                     "log_rt_t0", "t0 log RT",
-                     "log_rt_t1", "t1 log RT",
-                     "log_rt_t2", "t2 log RT",
-                     "log_rt_t3", "t3 log RT",
-                     "log_rt_t4", "t4 log RT",
-                     "prod_t0" , "t0 Production",
-                     "prod_t1" , "t1 Production",
-                     "prod_t2" , "t2 Production" ,
-                     "prod_t3", "t3 Production",         
-                     "prod_t4", "t4 Production" ,
-                     "speed_intercept" , "Speed intercept" ,  
-                     "speed_slope" , "Speed slope",
-                     "vocab_intercept", "Vocabulary intercept",
-                     "vocab_slope", "Vocabulary slope" )
+node_text <- tribble(~name, ~ pretty, ~fill, 
+                     "acc_t0", "t0 Accuracy", "lightblue",
+                     "acc_t1", "t1 Accuracy", "lightblue",
+                     "acc_t2", "t2 Accuracy","lightblue",
+                     "acc_t3", "t3 Accuracy","lightblue",
+                     "acc_t4", "t4 Accuracy","lightblue",
+                     "accuracy_intercept", "Accuracy intercept","lightblue",
+                     "accuracy_slope", "Accuracy slope","lightblue",
+                     "log_rt_t0", "t0 log RT","pink",
+                     "log_rt_t1", "t1 log RT","pink",
+                     "log_rt_t2", "t2 log RT","pink",
+                     "log_rt_t3", "t3 log RT","pink",
+                     "log_rt_t4", "t4 log RT","pink",
+                     "prod_t0" , "t0 Production", "lightgreen",
+                     "prod_t1" , "t1 Production",  "lightgreen",
+                     "prod_t2" , "t2 Production" ,  "lightgreen",
+                     "prod_t3", "t3 Production",          "lightgreen",
+                     "prod_t4", "t4 Production" , "lightgreen",
+                     "speed_intercept" , "Speed intercept" ,  "pink",
+                     "speed_slope" , "Speed slope","pink",
+                     "vocab_intercept", "Vocabulary intercept", "lightgreen",
+                     "vocab_slope", "Vocabulary slope",  "lightgreen" ) |> 
+  mutate(alpha=.5)
 
 nodes <- get_nodes(slopes_long) |> tibble() |> left_join(node_text) |> mutate(label=pretty)
 
 
 edges <- get_edges(slopes_long) |> mutate(label_location=.5) |> mutate(label=ifelse(arrow=="last", NA, label)) |>  mutate(connect_from=ifelse(to==from, "right",NA),
                     connect_to=connect_from) |> 
-  mutate(color="black")
+  mutate(color="black", label_hjust=.5, label_location=.5)
 
 edges[52,"curvature"]=85
 edges[52,"color"]="blue"
@@ -575,28 +651,41 @@ edges[61,"curvature"]=85
 edges[61,"color"]="blue"
 edges[66,"curvature"]=85
 edges[66,"color"]="blue"
+edges[52, "label_hjust"]=0
+edges[61, "label_hjust"]=0
+edges[66, "label_hjust"]=0
+
 
 
 edges[54,"curvature"]=85
+edges[54, "label_hjust"]=0
+
 edges[63,"curvature"]=85
+edges[63, "label_hjust"]=0
 
 
 edges[53,"curvature"]=80
 edges[53,"color"]="red"
 edges[55,"curvature"]=82
+edges[55,"label_location"]=.55
+
 edges[55,"color"]="red"
 edges[62,"curvature"]=80
 edges[62,"color"]="red"
+edges[53, "label_location"]=.6
+edges[53, "label_hjust"]=0.4
 
 
 
 edges[58,"curvature"]=80
-edges[58,"color"]="green"
+edges[58,"color"]="darkgreen"
 edges[60,"curvature"]=82
-edges[60,"color"]="green"
+edges[60,"color"]="darkgreen"
+edges[60,"label_location"]=.45
 edges[65,"curvature"]=80
-edges[65,"color"]="green"
-
+edges[65,"color"]="darkgreen"
+edges[65, "label_location"]=.4
+edges[53, "label_hjust"]=0.4
 
 
 
@@ -613,10 +702,16 @@ prepare_graph(edges=edges, nodes=nodes, text_size = 2, layout = t(layout),angle=
           rect_width=1.5,
           rect_height=2,
           ellipses_width=1.5,
-          ellipses_height=4,
+          ellipses_height=3,
+          variance_width= .5,
+          variance_height=1.3,
+          var_arrow_angle=10,
+          var_arrow_length=.05,
+          arrow_angle=15,
+          arrow_length=.07,
           variance_diameter=1,
-          spacing_y=3,
-          spacing_x=2,
+          spacing_y=2.5,
+          spacing_x=1.5,
           fix_coord=FALSE) |> 
   edit_edges({connect_from=case_when(
     (to==from & from %in% c("accuracy_intercept","accuracy_slope","speed_slope",
