recache and revisions

--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -6,7 +6,37 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{bergelson2023,
+  title={Everyday language input and production in 1,001 children from six continents},
+  author={Bergelson, Elika and Soderstrom, Melanie and Schwarz, Iris-Corinna and Rowland, Caroline F and Ram{\'\i}rez-Esparza, Nair{\'a}n and Hamrick, Lisa R and Marklund, Ellen and Kalashnikova, Marina and Guez, Ava and Casillas, Marisa and others},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={120},
+  number={52},
+  pages={e2300671120},
+  year={2023}
+}
 
+@article{manybabies2020,
+  title={Quantifying sources of variability in infancy research using the infant-directed-speech preference},
+  author={ManyBabies Consortium},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={3},
+  number={1},
+  pages={24--52},
+  year={2020},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{frank2017,
+  title={A collaborative approach to infant research: Promoting reproducibility, best practices, and theory-building},
+  author={Frank, Michael C and Bergelson, Elika and Bergmann, Christina and Cristia, Alejandrina and Floccia, Caroline and Gervain, Judit and Hamlin, J Kiley and Hannon, Erin E and Kline, Melissa and Levelt, Claartje and others},
+  journal={Infancy},
+  volume={22},
+  number={4},
+  pages={421--435},
+  year={2017},
+  publisher={Wiley Online Library}
+}
 
 @article{vanderweele2023dimensional,
 	author = {VanderWeele, Tyler J and Batty, Charles JK},
